--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,14 @@
 /db/*.sqlite3
 /db/*.sqlite3-journal
 
+/db/schema.rb
+
 # Игнорирование всех логов и временных файлов.
 /log/*.log
 /tmp
 
 # Игнорирование прочих ненужных файлов.
+config/database.yml
 database.yml
 doc/
 *.swp
